# rust-struct-valid-poc

./: Cargo.toml  README.md  package-lock.json  test.yml
src/: lib.rs
