[package]
name = "cpu-count"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
serde_valid = "0.9.0"
serde_derive = "1.0.145"
serde_yaml = "0.9.13"
serde_json = "1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-5"]
